--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/go-neutrino/neutrino-javascript-sdk/issues"
   },
-  "homepage": "https://github.com/go-neutrino/neutrino-javascript-sdk#readme"
+  "homepage": "https://github.com/go-neutrino/neutrino-javascript-sdk#readme",
+  "devDependencies": {
+    "browserify": "^12.0.1",
+    "exorcist": "^0.4.0",
+    "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "request": "^2.65.0"
+  }
 }
