--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "gulp-ignore": "^2.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.4.2",
+    "lodash": "^3.10.1",
+    "react-tools": "^0.13.0-beta.2",
     "request": "^2.65.0"
   }
 }
