--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/neutrino.js",
   "scripts": {
+    "start": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,20 +18,32 @@
   },
   "homepage": "https://github.com/go-neutrino/neutrino-javascript-sdk#readme",
   "devDependencies": {
+    "babel-plugin-syntax-flow": "^6.0.2",
+    "babel-plugin-transform-runtime": "^6.0.14",
+    "babel-preset-es2015": "^6.0.14",
+    "babel-runtime": "^6.0.14",
+    "babelify": "^7.0.2",
     "browserify": "^12.0.1",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
-    "gulp-rename": "^1.2.2",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "dependencies": {
+    "gulp-babel": "^6.0.0",
     "gulp-ignore": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rollup": "^1.0.1",
+    "gulp-rollup-babel": "^1.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.2",
-    "lodash": "^3.10.1",
+    "gulp-watch": "^4.3.5",
     "react-tools": "^0.13.0-beta.2",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0"
+  },
+  "dependencies": {
+    "axios": "^0.7.0",
+    "httpclient": "0.0.4",
+    "lodash": "^3.10.1",
     "request": "^2.65.0"
   }
 }
