--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "gulp-rollup-babel": "^1.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
+    "gulp-typescript": "^2.11.0",
     "gulp-uglify": "^1.4.2",
     "gulp-watch": "^4.3.5",
+    "install": "^0.4.4",
+    "npm": "^3.7.2",
     "react-tools": "^0.13.0-beta.2",
     "reactify": "^1.1.1",
+    "tsify": "^0.13.2",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "axios": "^0.7.0",
