--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-tools": "^0.13.0-beta.2",
     "reactify": "^1.1.1",
     "tsify": "^0.13.2",
+    "typescript": "^1.9.0-dev.20160217",
     "vinyl-source-stream": "^1.1.0",
+    "walk-sync": "^0.2.6",
     "watchify": "^3.7.0"
   },
   "dependencies": {
