--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-syntax-flow": "^6.0.2",
     "babel-plugin-transform-runtime": "^6.0.14",
     "babel-preset-es2015": "^6.0.14",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.0.14",
     "babelify": "^7.0.2",
     "browserify": "^12.0.1",
@@ -40,6 +41,7 @@
     "npm": "^3.7.2",
     "react-tools": "^0.13.0-beta.2",
     "reactify": "^1.1.1",
+    "remapify": "^2.1.0",
     "tsify": "^0.13.2",
     "typescript": "^1.9.0-dev.20160217",
     "vinyl-source-stream": "^1.1.0",
@@ -48,6 +50,7 @@
   },
   "dependencies": {
     "axios": "^0.7.0",
+    "deep-diff": "^0.3.3",
     "httpclient": "0.0.4",
     "lodash": "^3.10.1",
     "request": "^2.65.0"
