Added mocha and chai for the unit test

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-runtime": "^6.0.14",
     "babelify": "^7.0.2",
     "browserify": "^12.0.1",
+    "chai": "^3.5.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.0.0",
     "gulp-ignore": "^2.0.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
