--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eventemitter2": "^0.4.14",
     "httpclient": "0.0.4",
     "lodash": "^3.10.1",
-    "observe-js": "^0.5.7",
+    "observe-js": "git+https://github.com/gngeorgiev/observe-js.git",
     "request": "^2.65.0",
     "sockjs-client": "^1.0.3",
     "utf-8-validate": "^1.2.1"
